--- a/MarkdownWeb/theme.css
+++ b/MarkdownWeb/theme.css
@@ -1,6 +1,6 @@
-#previewPane{
+
 body {
-  font-family: Source Han Sans CN, arial, sans-serif;
+  font-family: "Lato", arial, sans-serif;
   font-size: 14px;
   line-height: 1.6;
   padding-top: 10px;
@@ -298,5 +298,4 @@ sup {
     pre {
         word-wrap: break-word;
     }
-}
 }
