--- a/MarkdownWeb/style.css
+++ b/MarkdownWeb/style.css
@@ -1,12 +1,12 @@
 
 @font-face{
-    font-family: 'droidsansmono';
-    src: url(../fonts/droidsansmono.ttf);
+    font-family: 'Monaco';
+    src: url(../assets/fonts/Monaco.ttf);
 }
 
 @font-face{
     font-family: 'opensans';
-    src: url(../fonts/Fira.ttf);
+    src: url(../assets/fonts/OpenSans.ttf);
 }
 
 html,body {
@@ -14,14 +14,14 @@ html,body {
     padding:0;
     font-family: opensans, Verdana, sans-serif;
     font-size: 15px;
-    background-color: #E3EDCD;
+    background-color: #065279;
 }
 
 a {
     color: deepskyblue;
 }
 textarea {
-    font-family: droidsansmono;
+    font-family: Monaco;
 }
 
 #pageHeader {
@@ -30,7 +30,7 @@ textarea {
     text-align: center;
     margin-bottom: 0;
     margin-top: 0.4em;
-    color: #766;
+    color: #fff;
 }
 
 #pageHeader h1 {
@@ -83,7 +83,7 @@ textarea {
 }
 
 .paneHeader {
-    margin: 0;
+    margin: 30px 0 0 0;
     padding: 10px;
     position: relative;
     width: 100%;
@@ -104,6 +104,8 @@ textarea {
 
 #paneSetting {
     display: block;
+    padding-right: 20px;
+    margin-top: 0;
     margin-left: auto;
     margin-right: 0.5em;
     font-size: 80%;
@@ -115,7 +117,7 @@ textarea {
 }
 
 .pane {
-    margin: 0;
+    margin: 30px 0;
     padding: 0;
     padding-left: 4px; /* pane padding */
     width: 100%;
@@ -131,7 +133,7 @@ textarea {
 
     /* for now, set a height so things look nice
        if the user has javascript disabled */
-    height: 400px;
+    height: 750px;
 }
 
 #previewPane {
@@ -152,13 +154,14 @@ div.pane {
 }
 
 #inputPane {
-    font-family: droidsansmono, Consolas, monospace;
+    font-family: Monaco, Consolas, monospace;
     font-size:15px;
     background-color: #fff;
 }
 
 #previewPane {
     padding: 0;
+    word-wrap: break-word;
 }
 
 #previewPane > * {
@@ -199,7 +202,7 @@ div.pane {
     float: left;
     width: 100%;
     height: 2.5em;
-    margin-top: 0.5em;
+    margin-top: 2em;
     font-family: Helvetica, Arial, Verdana, sans-serif;
 }
 
@@ -478,3 +481,63 @@ select:disabled {
     cursor: default; }
 select[multiple] {
     height: auto; }
+
+
+table {
+  padding: 0;border-collapse: collapse; }
+  table tr {
+    border-top: 1px solid #cccccc;
+    background-color: white;
+    margin: 0;
+    padding: 0; }
+    table tr:nth-child(even) {
+      background-color: #f9f9f9; }
+    table tr th {
+      font-weight: bold;
+      border: 1px solid #cccccc;
+      margin: 0;
+      padding: 6px 13px; }
+    table tr td {
+      border: 1px solid #cccccc;
+      margin: 0;
+      padding: 6px 13px; }
+    table tr th :first-child, table tr td :first-child {
+      margin-top: 0; }
+    table tr th :last-child, table tr td :last-child {
+      margin-bottom: 0; }
+
+@media screen and (max-width: 768px) {
+    #leftContainer, #rightContainer {
+        margin: 0;
+        float: none;
+        width: 96%;
+        height: 80%;
+        left: 2%;
+        right: 2%;
+    }
+
+    #footer span {
+        display: block;
+        float: none;
+        width: auto;
+        height: auto;
+    }
+
+    #savepdf {
+        padding-top: 20px;
+        padding-left: 50px;
+    }
+
+    #convertTextControls {
+        padding-top: 10px;
+        padding-left: 50px;
+        right: 0;
+        position: relative;
+    }
+    .pane {
+        height: 300px;
+    }
+
+}
+
+
