--- a/MarkdownWeb/theme.css
+++ b/MarkdownWeb/theme.css
@@ -158,8 +158,8 @@ table {
     background-color: white;
     margin: 0;
     padding: 0; }
-    table tr:nth-child(2n) {
-      background-color: #f8f8f8; }
+    table tr:nth-child(even) {
+      background-color: darkgray; }
     table tr th {
       font-weight: bold;
       border: 1px solid #cccccc;
@@ -282,9 +282,16 @@ sup {
     vertical-align: super;
     line-height: 0;
 }
+
+
+
+
 * {
     -webkit-print-color-adjust: exact;
 }
+
+
+
 @media screen and (min-width: 914px) {
     body {
         width: 854px;
