modify some responsive feature

--- a/MarkdownWeb/style.css
+++ b/MarkdownWeb/style.css
@@ -539,6 +539,11 @@ table {
         padding-left: 50px;
     }
 
+    #savemd {
+        padding-top: 10px;
+        padding-left: 50px;
+    }
+
     #convertTextControls {
         padding-top: 10px;
         padding-left: 50px;
